Fixed scrollbar appearing

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,5 +1,5 @@
 #url-form {
-  margin: 1rem;
+  padding: 1rem;
   text-align: center;
   .inputs {
     $border-radius: 5px;
